@@ -1,3 +1,7 @@
+2010-06-01  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* src/width/width.c: indent'd
+
 2010-04-20  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* package/debian/compat: RCS_BASE
